Fix game systems seed and implement notifications backend