@@ -1,22 +1,27 @@
 package com.tourney.service.notification;
 
 import com.tourney.domain.games.Match;
+import com.tourney.domain.notification.Notification;
 import com.tourney.domain.notification.NotificationType;
 import com.tourney.domain.tournament.Tournament;
 import com.tourney.domain.tournament.TournamentRound;
 import com.tourney.dto.notification.NotificationDTO;
+import com.tourney.repository.NotificationRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class NotificationServiceImpl implements NotificationService {
+
+    private final NotificationRepository notificationRepository;
 
     @Override
     public void notifyRoundStart(Tournament tournament, TournamentRound round) {
@@ -38,29 +43,59 @@ public class NotificationServiceImpl implements NotificationService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<NotificationDTO> getRecentNotifications(Long userId, int limit) {
         log.debug("Getting recent notifications for user {}", userId);
-        // TODO: Implement actual notification retrieval
-        return Collections.emptyList();
+        if (userId == null) {
+            return List.of();
+        }
+
+        int safeLimit = Math.max(1, Math.min(limit, 50));
+        return notificationRepository
+                .findByUserIdOrderByCreatedAtDesc(userId, PageRequest.of(0, safeLimit))
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public int getUnreadCount(Long userId) {
         log.debug("Getting unread count for user {}", userId);
-        // TODO: Implement actual unread count
-        return 0;
+        if (userId == null) {
+            return 0;
+        }
+
+        long count = notificationRepository.countByUserIdAndReadFalse(userId);
+        return (int) Math.min(Integer.MAX_VALUE, count);
     }
 
     @Override
+    @Transactional
     public void markAsRead(Long userId, Long notificationId) {
         log.debug("Marking notification {} as read for user {}", notificationId, userId);
-        // TODO: Implement actual mark as read
+        if (userId == null || notificationId == null) {
+            return;
+        }
+
+        notificationRepository.findByIdAndUserId(notificationId, userId)
+                .ifPresent(notification -> {
+                    notification.setRead(true);
+                    notificationRepository.save(notification);
+                });
     }
 
     @Override
+    @Transactional
     public void markAllAsRead(Long userId) {
         log.debug("Marking all notifications as read for user {}", userId);
-        // TODO: Implement actual mark all as read
+        if (userId == null) {
+            return;
+        }
+
+        List<Notification> unreadNotifications = notificationRepository.findByUserIdAndReadFalse(userId);
+        unreadNotifications.forEach(notification -> notification.setRead(true));
+        notificationRepository.saveAll(unreadNotifications);
     }
 
     @Override
@@ -69,6 +104,36 @@ public class NotificationServiceImpl implements NotificationService {
                                   String relatedEntityName) {
         log.info("Creating notification for user {}: type={}, tournament={}, message={}", 
                 userId, type, tournamentName, message);
-        // TODO: Implement actual notification creation
+
+        if (userId == null || type == null || tournamentId == null || tournamentName == null || message == null) {
+            log.warn("Skipping notification creation due to missing required fields: userId={}, type={}, tournamentId={}, tournamentName={}, messagePresent={}",
+                    userId, type, tournamentId, tournamentName, message != null);
+            return;
+        }
+
+        Notification notification = new Notification();
+        notification.setUserId(userId);
+        notification.setType(type);
+        notification.setTournamentId(tournamentId);
+        notification.setTournamentName(tournamentName);
+        notification.setMessage(message);
+        notification.setRead(false);
+        notification.setTriggeredByUserId(relatedEntityId);
+        notification.setTriggeredByUserName(relatedEntityName);
+
+        notificationRepository.save(notification);
+    }
+
+    private NotificationDTO toDto(Notification notification) {
+        return NotificationDTO.builder()
+                .id(notification.getId())
+                .type(notification.getType())
+                .tournamentId(notification.getTournamentId())
+                .tournamentName(notification.getTournamentName())
+                .message(notification.getMessage())
+                .read(notification.isRead())
+                .createdAt(notification.getCreatedAt())
+                .triggeredByUserName(notification.getTriggeredByUserName())
+                .build();
     }
 }
